Enable hyphenation in grid layout

--- a/app/src/main/res/layout/item_notes_list_note_item_grid.xml
+++ b/app/src/main/res/layout/item_notes_list_note_item_grid.xml
@@ -25,9 +25,11 @@
             android:layout_marginEnd="@dimen/spacer_2x"
             android:layout_marginRight="@dimen/spacer_2x"
             android:layout_marginBottom="@dimen/spacer_1x"
+            android:hyphenationFrequency="full"
             android:textAppearance="?attr/textAppearanceHeadline5"
             android:textColor="@color/fg_default"
             tools:maxLength="50"
+            tools:targetApi="m"
             tools:text="@tools:sample/lorem/random" />
 
 
