--- a/app/src/main/res/layout/activity_notes_list_view.xml
+++ b/app/src/main/res/layout/activity_notes_list_view.xml
@@ -101,30 +101,44 @@
             android:layout_height="match_parent"
             tools:context="it.niedermann.owncloud.notes.android.activity.NotesListViewActivity">
 
-            <FrameLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <include
-                    android:id="@+id/empty_content_view"
-                    layout="@layout/empty_content_view" />
-
-                <ProgressBar
-                    android:id="@+id/progress_circular"
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/sorting_method"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:indeterminateTint="@color/defaultBrand"
-                    tools:targetApi="lollipop"
-                    tools:visibility="gone" />
+                    android:contentDescription="@string/action_sorting_method"
+                    android:padding="@dimen/spacer_1hx"
+                    app:srcCompat="@drawable/alphabetical_asc" />
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recycler_view"
+                <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:scrollbars="vertical"
-                    tools:listitem="@layout/item_notes_list_note_item_with_excerpt" />
-            </FrameLayout>
+                    android:layout_height="match_parent">
+
+                    <include
+                        android:id="@+id/empty_content_view"
+                        layout="@layout/empty_content_view" />
+
+                    <ProgressBar
+                        android:id="@+id/progress_circular"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:indeterminateTint="@color/defaultBrand"
+                        tools:targetApi="lollipop"
+                        tools:visibility="gone" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recycler_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:scrollbars="vertical"
+                        tools:listitem="@layout/item_notes_list_note_item_with_excerpt" />
+                </FrameLayout>
+            </LinearLayout>
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     </LinearLayout>
