Tint sorting method icon for better contrast

--- a/app/src/main/res/layout/activity_notes_list_view.xml
+++ b/app/src/main/res/layout/activity_notes_list_view.xml
@@ -83,6 +83,7 @@
                         tools:text="@string/search_in_all" />
 
                     <androidx.appcompat.widget.AppCompatImageView
+                        android:tint="@color/accent"
                         android:id="@+id/sorting_method"
                         android:layout_width="?attr/actionBarSize"
                         android:layout_height="?attr/actionBarSize"
