--- a/app/src/main/res/layout/item_account_choose.xml
+++ b/app/src/main/res/layout/item_account_choose.xml
@@ -11,8 +11,7 @@
     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/spacer_1hx"
-        android:layout_marginRight="@dimen/spacer_1hx">
+        android:layout_marginEnd="@dimen/spacer_1hx">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/accountItemAvatar"
@@ -39,9 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginStart="@dimen/spacer_2x"
-        android:layout_marginLeft="@dimen/spacer_2x"
         android:layout_marginEnd="@dimen/spacer_2x"
-        android:layout_marginRight="@dimen/spacer_2x"
         android:layout_weight="1"
         android:ellipsize="middle"
         android:singleLine="true"
