--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,8 @@
     <dimen name="spacer_5x">40dp</dimen>
     <dimen name="spacer_6x">48dp</dimen>
 
+    <dimen name="avatar_size">36dp</dimen>
+
     <!-- Drawer header -->
     <dimen name="drawer_header_height">100dp</dimen>
     <dimen name="drawer_header_logo_size">42dp</dimen>
