Darken toolbar background color in darkmode

--- a/app/src/main/res/layout/activity_notes_list_view.xml
+++ b/app/src/main/res/layout/activity_notes_list_view.xml
@@ -41,6 +41,7 @@
                 android:layout_marginTop="@dimen/spacer_1hx"
                 android:layout_marginEnd="@dimen/spacer_2x"
                 android:layout_marginBottom="@dimen/spacer_1hx"
+                app:cardBackgroundColor="@color/appbar"
                 app:cardCornerRadius="@dimen/spacer_1x"
                 app:cardElevation="2dp"
                 app:strokeWidth="0dp">
