#872 Tweak toolbar design

--- a/app/src/main/res/layout/activity_notes_list_view.xml
+++ b/app/src/main/res/layout/activity_notes_list_view.xml
@@ -37,10 +37,10 @@
                 android:id="@+id/home_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/spacer_1x"
-                android:layout_marginTop="@dimen/design_appbar_elevation"
-                android:layout_marginEnd="@dimen/spacer_1x"
-                android:layout_marginBottom="@dimen/design_appbar_elevation"
+                android:layout_marginStart="@dimen/spacer_2x"
+                android:layout_marginTop="@dimen/spacer_1hx"
+                android:layout_marginEnd="@dimen/spacer_2x"
+                android:layout_marginBottom="@dimen/spacer_1hx"
                 app:cardBackgroundColor="@color/appbar"
                 app:cardCornerRadius="@dimen/spacer_1x"
                 app:cardElevation="2dp"
