--- a/app/src/main/res/layout/item_navigation.xml
+++ b/app/src/main/res/layout/item_navigation.xml
@@ -3,9 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/bg_navdrawer_item"
     android:gravity="center_vertical"
+    android:paddingTop="@dimen/spacer_1hx"
+    android:paddingBottom="@dimen/spacer_1hx"
     android:paddingStart="@dimen/spacer_1x"
-    android:paddingEnd="@dimen/spacer_1x">
+    android:paddingEnd="@dimen/spacer_2x">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/navigationItemIcon"
