Use a variable for the activity padding

--- a/app/src/main/res/layout/fragment_note_edit.xml
+++ b/app/src/main/res/layout/fragment_note_edit.xml
@@ -27,13 +27,15 @@
             android:id="@+id/editContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/activity_padding"
+            android:layout_marginEnd="@dimen/activity_padding"
             android:background="?attr/colorPrimary"
             android:ems="10"
             android:gravity="top"
             android:inputType="textMultiLine|textCapSentences"
             android:padding="@dimen/spacer_2x"
-            android:paddingStart="@dimen/spacer_3x"
-            android:paddingEnd="@dimen/spacer_3x"
+            android:paddingStart="@dimen/spacer_2x"
+            android:paddingEnd="@dimen/spacer_2x"
             android:textColor="@color/fg_default"
             android:theme="@style/textViewStyle"
             tools:text="@tools:sample/lorem/random" />
