--- a/app/src/main/res/layout/fragment_note_preview.xml
+++ b/app/src/main/res/layout/fragment_note_preview.xml
@@ -24,9 +24,11 @@
                 android:id="@+id/single_note_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/activity_padding"
+                android:layout_marginEnd="@dimen/activity_padding"
                 android:padding="@dimen/spacer_2x"
-                android:paddingStart="@dimen/spacer_3x"
-                android:paddingEnd="@dimen/spacer_3x"
+                android:paddingStart="@dimen/spacer_2x"
+                android:paddingEnd="@dimen/spacer_2x"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@color/fg_default"
                 android:textIsSelectable="true"
