--- a/app/src/main/res/layout/item_preference_category.xml
+++ b/app/src/main/res/layout/item_preference_category.xml
@@ -4,7 +4,9 @@
     android:id="@android:id/title"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingStart="64dp"
+    android:layout_marginStart="56dp"
+    android:layout_marginEnd="0dp"
+    android:paddingStart="@dimen/activity_padding"
     android:paddingTop="@dimen/spacer_3x"
     android:paddingEnd="0dp"
     tools:text="@tools:sample/lorem" />
