--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <style name="BaseTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar.Bridge">
         <item name="colorPrimary">@color/primary</item>
@@ -8,6 +8,7 @@
         <item name="colorControlNormal">?attr/colorAccent</item>
         <item name="windowActionModeOverlay">true</item>
         <item name="actionModeStyle">@style/actionModeStyle</item>
+        <item name="appBarLayoutStyle">@style/appBarLayoutStyle</item>
         <item name="toolbarStyle">@style/toolbarStyle</item>
     </style>
 
@@ -18,15 +19,18 @@
         <item name="android:textColorHighlight">@color/defaultTextHighlightBackground</item>
     </style>
 
+    <style name="appBarLayoutStyle" parent="@style/Widget.Design.AppBarLayout">
+        <item name="android:paddingStart">@dimen/activity_padding</item>
+        <item name="android:paddingEnd">@dimen/activity_padding</item>
+    </style>
+
     <style name="toolbarStyle" parent="@style/Widget.AppCompat.Toolbar">
-        <item name="android:paddingStart">@dimen/spacer_1x</item>
-        <item name="android:paddingEnd">@null</item>
         <item name="android:background">?attr/colorPrimary</item>
     </style>
 
     <style name="actionModeStyle" parent="@style/Widget.AppCompat.ActionMode">
-        <item name="android:paddingStart">@dimen/spacer_1x</item>
-        <item name="android:paddingEnd">@null</item>
+        <item name="android:paddingStart">@dimen/activity_padding</item>
+        <item name="android:paddingEnd">@dimen/activity_padding</item>
     </style>
 
     <style name="fab">
