Adjust account chooser and remove activity spacer on < w360dp

--- a/app/src/main/res/layout/activity_formatting_help.xml
+++ b/app/src/main/res/layout/activity_formatting_help.xml
@@ -33,8 +33,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/spacer_2x"
-            android:layout_marginStart="@dimen/activity_padding"
-            android:layout_marginEnd="@dimen/activity_padding"
+            android:layout_marginStart="@dimen/spacer_activity_sides"
+            android:layout_marginEnd="@dimen/spacer_activity_sides"
             android:paddingStart="@dimen/spacer_2x"
             android:paddingEnd="@dimen/spacer_2x"
             android:textAppearance="?android:attr/textAppearanceMedium"
