--- a/app/src/main/res/layout/fragment_note_edit.xml
+++ b/app/src/main/res/layout/fragment_note_edit.xml
@@ -27,8 +27,8 @@
             android:id="@+id/editContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/activity_padding"
-            android:layout_marginEnd="@dimen/activity_padding"
+            android:layout_marginStart="@dimen/spacer_activity_sides"
+            android:layout_marginEnd="@dimen/spacer_activity_sides"
             android:background="?attr/colorPrimary"
             android:ems="10"
             android:gravity="top"
