--- a/app/src/main/res/layout/item_account_choose.xml
+++ b/app/src/main/res/layout/item_account_choose.xml
@@ -1,74 +1,83 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/accountLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?attr/selectableItemBackground"
-    android:orientation="horizontal"
-    android:gravity="center"
-    android:padding="@dimen/spacer_2x">
+    android:paddingStart="@dimen/spacer_activity_sides"
+    android:paddingEnd="@dimen/spacer_activity_sides">
 
-    <FrameLayout
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/accountLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/spacer_1hx">
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="@dimen/spacer_2x"
+        android:paddingStart="@dimen/spacer_1x"
+        android:paddingEnd="@dimen/spacer_1x">
+
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/spacer_1hx">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/accountItemAvatar"
+                android:layout_width="@dimen/avatar_size"
+                android:layout_height="@dimen/avatar_size"
+                android:contentDescription="@null"
+                android:focusable="false"
+                android:scaleType="center"
+                app:srcCompat="@drawable/ic_account_circle_grey_24dp" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/currentAccountIndicator"
+                android:layout_width="12dp"
+                android:layout_height="12dp"
+                android:layout_gravity="end|bottom"
+                android:visibility="gone"
+                app:srcCompat="@drawable/check"
+                tools:visibility="visible" />
+        </FrameLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/spacer_1x"
+            android:layout_marginEnd="@dimen/spacer_2x"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/accountName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="middle"
+                android:singleLine="true"
+                android:textAppearance="?attr/textAppearanceListItem"
+                tools:text="@tools:sample/full_names" />
+
+            <TextView
+                android:id="@+id/accountHost"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="middle"
+                android:singleLine="true"
+                android:textAppearance="?attr/textAppearanceListItemSecondary"
+                tools:text="@tools:sample/full_names" />
+        </LinearLayout>
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/accountItemAvatar"
-            android:layout_width="@dimen/avatar_size"
-            android:layout_height="@dimen/avatar_size"
+            android:id="@+id/delete"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@null"
             android:focusable="false"
             android:scaleType="center"
-            app:srcCompat="@drawable/ic_account_circle_grey_24dp" />
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/currentAccountIndicator"
-            android:layout_width="12dp"
-            android:layout_height="12dp"
-            android:layout_gravity="end|bottom"
             android:visibility="gone"
-            app:srcCompat="@drawable/check"
+            app:srcCompat="@drawable/ic_delete_grey600_24dp"
             tools:visibility="visible" />
-    </FrameLayout>
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/spacer_1x"
-        android:layout_marginEnd="@dimen/spacer_2x"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/accountName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ellipsize="middle"
-            android:singleLine="true"
-            android:textAppearance="?attr/textAppearanceListItem"
-            tools:text="@tools:sample/full_names" />
-
-        <TextView
-            android:id="@+id/accountHost"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ellipsize="middle"
-            android:singleLine="true"
-            android:textAppearance="?attr/textAppearanceListItemSecondary"
-            tools:text="@tools:sample/full_names" />
     </LinearLayout>
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/delete"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:contentDescription="@null"
-        android:focusable="false"
-        android:scaleType="center"
-        android:visibility="gone"
-        app:srcCompat="@drawable/ic_delete_grey600_24dp"
-        tools:visibility="visible" />
-</LinearLayout>
+</FrameLayout>
