--- a/app/src/main/res/layout/item_notes_list_note_item_without_excerpt.xml
+++ b/app/src/main/res/layout/item_notes_list_note_item_without_excerpt.xml
@@ -32,7 +32,7 @@
         android:background="@drawable/list_item_background_selector"
         android:baselineAligned="false"
         android:gravity="center_vertical"
-        android:paddingStart="@dimen/activity_padding"
+        android:paddingStart="@dimen/spacer_activity_sides"
         android:paddingEnd="@null">
 
         <FrameLayout
