--- a/app/src/main/res/layout/item_preference_category.xml
+++ b/app/src/main/res/layout/item_preference_category.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_marginStart="56dp"
     android:layout_marginEnd="0dp"
-    android:paddingStart="@dimen/activity_padding"
+    android:paddingStart="@dimen/spacer_activity_sides"
     android:paddingTop="@dimen/spacer_3x"
     android:paddingEnd="0dp"
     tools:text="@tools:sample/lorem" />
