--- a/app/src/main/res/layout/dialog_account_switcher.xml
+++ b/app/src/main/res/layout/dialog_account_switcher.xml
@@ -6,70 +6,66 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <FrameLayout
+
+    <LinearLayout
+        android:id="@+id/accountLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
-        android:paddingStart="@dimen/spacer_activity_sides"
-        android:paddingEnd="@dimen/spacer_activity_sides">
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="@dimen/spacer_2x"
+        android:paddingStart="@dimen/spacer_1x"
+        android:paddingEnd="@dimen/spacer_1x">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/currentAccountItemAvatar"
+            android:layout_width="@dimen/avatar_size"
+            android:layout_height="@dimen/avatar_size"
+            android:layout_marginStart="@dimen/spacer_activity_sides"
+            android:contentDescription="@null"
+            android:focusable="false"
+            android:scaleType="center"
+            app:srcCompat="@drawable/ic_account_circle_grey_24dp" />
+
 
         <LinearLayout
-            android:id="@+id/accountLayout"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:padding="@dimen/spacer_2x"
-            android:paddingStart="@dimen/spacer_1x"
-            android:paddingEnd="@dimen/spacer_1x">
+            android:layout_marginStart="@dimen/spacer_1x"
+            android:layout_marginEnd="@dimen/spacer_2x"
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/currentAccountItemAvatar"
-                android:layout_width="@dimen/avatar_size"
-                android:layout_height="@dimen/avatar_size"
-                android:contentDescription="@null"
-                android:focusable="false"
-                android:scaleType="center"
-                app:srcCompat="@drawable/ic_account_circle_grey_24dp" />
-
-
-            <LinearLayout
-                android:layout_width="0dp"
+            <TextView
+                android:id="@+id/accountName"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/spacer_1x"
-                android:layout_marginEnd="@dimen/spacer_2x"
-                android:layout_weight="1"
-                android:orientation="vertical">
+                android:ellipsize="middle"
+                android:singleLine="true"
+                android:textAppearance="?attr/textAppearanceListItem"
+                tools:text="@tools:sample/full_names" />
 
-                <TextView
-                    android:id="@+id/accountName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:ellipsize="middle"
-                    android:singleLine="true"
-                    android:textAppearance="?attr/textAppearanceListItem"
-                    tools:text="@tools:sample/full_names" />
-
-                <TextView
-                    android:id="@+id/accountHost"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:ellipsize="middle"
-                    android:singleLine="true"
-                    android:textAppearance="?attr/textAppearanceListItemSecondary"
-                    tools:text="@tools:sample/full_names" />
-            </LinearLayout>
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/check"
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:contentDescription="@null"
-                android:focusable="false"
-                android:scaleType="center"
-                app:srcCompat="@drawable/check" />
+            <TextView
+                android:id="@+id/accountHost"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="middle"
+                android:singleLine="true"
+                android:textAppearance="?attr/textAppearanceListItemSecondary"
+                tools:text="@tools:sample/full_names" />
         </LinearLayout>
-    </FrameLayout>
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/check"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_marginEnd="@dimen/spacer_activity_sides"
+            android:contentDescription="@null"
+            android:focusable="false"
+            android:scaleType="center"
+            app:srcCompat="@drawable/check" />
+    </LinearLayout>
 
     <View
         android:layout_width="match_parent"
