Fix #893 Grid view: 2-letter category title not center aligned

--- a/app/src/main/res/layout/item_notes_list_note_item_grid.xml
+++ b/app/src/main/res/layout/item_notes_list_note_item_grid.xml
@@ -94,6 +94,7 @@
                     app:chipBackgroundColor="@color/primary"
                     app:chipStrokeColor="@color/defaultBrand"
                     app:chipStrokeWidth="1dp"
+                    app:ensureMinTouchTargetSize="false"
                     tools:maxLength="50"
                     tools:text="@tools:sample/lorem/random" />
             </FrameLayout>
