--- a/app/src/main/res/layout/item_notes_list_note_item_grid.xml
+++ b/app/src/main/res/layout/item_notes_list_note_item_grid.xml
@@ -89,12 +89,18 @@
                     android:layout_marginStart="0dp"
                     android:layout_marginEnd="@dimen/spacer_2x"
                     android:ellipsize="middle"
+                    android:padding="@dimen/spacer_1hx"
                     android:textColor="?android:textColorPrimary"
                     android:textSize="@dimen/secondary_font_size"
                     app:chipBackgroundColor="@color/primary"
+                    app:chipEndPadding="@dimen/spacer_1x"
+                    app:chipMinHeight="0dp"
+                    app:chipStartPadding="@dimen/spacer_1x"
                     app:chipStrokeColor="@color/defaultBrand"
                     app:chipStrokeWidth="1dp"
                     app:ensureMinTouchTargetSize="false"
+                    app:textEndPadding="0dp"
+                    app:textStartPadding="0dp"
                     tools:maxLength="50"
                     tools:text="@tools:sample/lorem/random" />
             </FrameLayout>
