Adjust hints to actions

--- a/app/src/main/res/layout/activity_exception.xml
+++ b/app/src/main/res/layout/activity_exception.xml
@@ -44,6 +44,13 @@
                 tools:itemCount="2"
                 tools:listitem="@layout/item_tip" />
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/spacer_2x"
+                android:text="@string/error_dialog_we_need_info"
+                android:textAppearance="?attr/textAppearanceBody2" />
+
             <HorizontalScrollView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
