--- a/app/src/main/res/layout/fragment_note_edit.xml
+++ b/app/src/main/res/layout/fragment_note_edit.xml
@@ -23,7 +23,7 @@
         android:orientation="vertical"
         tools:context="it.niedermann.owncloud.notes.edit.EditNoteActivity">
 
-        <com.yydcdut.markdown.MarkdownEditText
+        <it.niedermann.android.markdown.MarkdownEditorImpl
             android:id="@+id/editContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
